Adds integration test for APIConnecector